# schichtwechsel

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: handover_cards.py  health.py  patients.py  structure.py  transcribe.py
backend/app/models/: __init__.py  handover.py  patient.py  sbar.py
backend/app/schemas/: sbar.py
backend/app/services/: card_store.py  completeness.py  gliner_service.py  patient_source.py  sbar_mapper.py  transcription.py
backend/app/services/detectors/: base.py  medication_state.py  vital_trend.py
backend/data/synthetic/: patient_001.json  patient_002.json  patient_003.json  seed.py
backend/scripts/: eval_compare.py  finetune.py  generate_training_data.py
backend/tests/: test_health.py
docs/: demo.md  spec.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/api/: handoverCards.ts  patients.ts  structure.ts  transcribe.ts
frontend/src/components/: PatientDetail.tsx  PatientList.tsx  PatientSidebar.tsx  RecordingSection.tsx  SBARCard.tsx
frontend/src/types/: handover.ts  index.ts  patient.ts  sbar.ts
